[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "random-ml"
version = "0.1.0"
description = "An implementation of Rabdomization based ML algorithm."
authors = [{ name = "Rahul Goswami", email = "rahul.goswami@iitg.ac.in" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "torch",
    "scikit-learn"
]

[tool.setuptools]
packages = ["randomml"]
