[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "random-ml"
version = "0.1.0"
description = "An implementation of Rabdomization based ML algorithm."
authors = [{ name = "Rahul Goswami", email = "rahul.goswami@iitg.ac.in" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "torch",
    "scikit-learn"
]


docs = [
    "ipython !=8.7.0",
    "nbsphinx>=0.9.2",
    "docutils",
    "setuptools-scm",
    "sphinx ~=7.3.7",
    "pydata-sphinx-theme ~=0.15.2",
    "sphinxcontrib-spelling",
    "sphinx-design ~=0.5.0",
    "sphinx-copybutton ~=0.5.2",
]

nbval = [
    "ipykernel",
    "ipython!=8.7.0",
    "matplotlib~=3.9.0",
    "nbformat",
    "nbval>=0.10.0",
    "seaborn~=0.13.2",
]

[tool.setuptools]
packages = ["randomml"]
